# attendance-api

./: .gitignore  Dockerfile  Makefile  README.md  app.py  config.yaml  gunicorn_conf.py  liquibase.properties  log.conf  pyproject.toml  pytest.ini
client/: __init__.py  postgres.py
client/postgres/: __init__.py  postgres_conn.py
client/redis/: __init__.py  redis_conn.py
client/tests/: test_postgres_conn.py  test_redis_conn.py
migration/: db.changelog-master.xml
models/: message.py  user_info.py
models/tests/: test_message.py  test_user_info.py
router/: attendance.py  cache.py
router/tests/: test_cache.py
scripts/: db_init.sh
utils/: json_encoder.py  log_encoder.py  test_json_encoder.py  validator.py
utils/tests/: test_json_encoder.py  test_log_encoder.py  test_validator.py
