[tool.poetry]
name = "attendance-api"
version = "0.1.0"
description = "A python based microservice for handling attendance records"
authors = ["Opstree Solutions"]
license = "Apache"
readme = "README.md"
packages = [{include = "attendance_api"}]

[tool.poetry.dependencies]
python = "^3.11"
peewee = "^3.16.2"
voluptuous = "^0.13.1"
redis = "^4.6.0"
json-logging-py = "^0.2"
jsonformatter = "^0.3.2"
python-json-logger = "^2.0.7"
flask-caching = "^2.0.2"

[tool.poetry.group.dev.dependencies]
Flask = "^2.3.2"
psycopg2 = "^2.9.6"
PyYAML = "^6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
